--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-passage.yaml
@@ -27,6 +27,15 @@ evals:
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
     params:
+      - -m recall.100
+      - -c
+    separator: "\t"
+    parse_index: 2
+    metric: R@100
+    metric_precision: 4
+    can_combine: true
+  - command: tools/eval/trec_eval.9.0.4/trec_eval
+    params:
       - -m recall.1000
       - -c
     separator: "\t"
@@ -45,7 +54,7 @@ index_stats:
   documents (non-empty): 20544550
   total terms: 4203956960
 topics:
-  - name: "[MS MARCO Document Ranking: Dev Queries](https://github.com/microsoft/MSMARCO-Document-Ranking)"
+  - name: "[MS MARCO Doc Ranking: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
     path: topics.msmarco-doc.dev.txt
     qrel: qrels.msmarco-doc.dev.txt
 models:
@@ -56,5 +65,21 @@ models:
     results:
       map:
         - 0.3182
+      R@100:
+        - 0.8481
       R@1000:
         - 0.9490
+  - name: bm25-tuned
+    display: BM25 (Tuned)
+    params:
+      - -bm25
+      - -bm25.k1 2.56
+      - -bm25.b 0.59
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+    results:
+      map:
+        - 0.3211
+      R@100:
+        - 0.8627
+      R@1000:
+        - 0.9530
