--- a/src/main/resources/regression/msmarco-doc-per-passage.yaml
+++ b/src/main/resources/regression/msmarco-doc-per-passage.yaml
@@ -1,5 +1,5 @@
 ---
-name: msmarco-doc
+name: msmarco-doc-per-passage
 index_command: target/appassembler/bin/IndexCollection
 index_utils_command: target/appassembler/bin/IndexReaderUtils
 search_command: target/appassembler/bin/SearchCollection
@@ -7,7 +7,7 @@ topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 index_root:
 ranking_root:
-collection: CleanTrecCollection
+collection: JsonCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 1
 index_options:
@@ -47,12 +47,12 @@ input_roots:
   - /tuna1/      # on tuna
   - /store/      # on orca
   - /scratch2/   # on damiano
-input: collections/msmarco/doc/
-index_path: indexes/lucene-index.msmarco-doc.pos+docvectors+raw
+input: collections/msmarco/doc-per-passage/
+index_path: indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw
 index_stats:
-  documents: 3213835
-  documents (non-empty): 3213835
-  total terms: 2748636047
+  documents: 20544550
+  documents (non-empty): 20544550
+  total terms: 3197886407
 topics:
   - name: "[MS MARCO Doc Ranking: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
     path: topics.msmarco-doc.dev.txt
@@ -61,26 +61,27 @@ models:
   - name: bm25-default
     display: BM25 (Default)
     params:
-      - -bm25
+      - -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.2310
+        - 0.2688
       R@100:
-        - 0.7279
+        - 0.7849
       R@1000:
-        - 0.8856
+        - 0.9180
   - name: bm25-default+rm3
     display: +RM3
     params:
       - -bm25
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1632
+        - 0.2416
       R@100:
-        - 0.6765
+        - 0.7876
       R@1000:
-        - 0.8785
+        - 0.9355
   - name: bm25-default+ax
     display: +Ax
     params:
@@ -88,79 +89,85 @@ models:
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1147
+        - 0.2229
       R@100:
-        - 0.5750
+        - 0.7703
       R@1000:
-        - 0.8369
+        - 0.9266
   - name: bm25-default+prf
     display: +PRF
     params:
       - -bm25
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1357
+        - 0.2325
       R@100:
-        - 0.6362
+        - 0.7714
       R@1000:
-        - 0.8471
+        - 0.9187
   - name: bm25-tuned
     display: BM25 (Tuned)
     params:
       - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.2775
+        - 0.2756
       R@100:
-        - 0.8076
+        - 0.8009
       R@1000:
-        - 0.9357
+        - 0.9311
   - name: bm25-tuned+rm3
     display: +RM3
     params:
       - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -rm3
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.2238
+        - 0.2443
       R@100:
-        - 0.7789
+        - 0.7955
       R@1000:
-        - 0.9307
+        - 0.9359
   - name: bm25-tuned+ax
     display: +Ax
     params:
       - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -axiom
       - -axiom.deterministic
       - -rerankCutoff 20
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1885
+        - 0.2350
       R@100:
-        - 0.7510
+        - 0.7909
       R@1000:
-        - 0.9249
+        - 0.9341
   - name: bm25-tuned+prf
     display: +PRF
     params:
       - -bm25
-      - -bm25.k1 4.46
-      - -bm25.b 0.82
+      - -bm25.k1 2.16
+      - -bm25.b 0.61
       - -bm25prf
+      - -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       map:
-        - 0.1531
+        - 0.2271
       R@100:
-        - 0.6819
+        - 0.7685
       R@1000:
-        - 0.8752
+        - 0.9162
