--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-doc.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery-per-doc.yaml
@@ -54,7 +54,7 @@ index_stats:
   documents (non-empty): 3213834
   total terms: 3748332076
 topics:
-  - name: "[MS MARCO Doc Ranking: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
+  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
     path: topics.msmarco-doc.dev.txt
     qrel: qrels.msmarco-doc.dev.txt
 models:
