--- a/src/main/resources/docgen/templates/dl19-passage-docTTTTTquery.template
+++ b/src/main/resources/docgen/templates/dl19-passage-docTTTTTquery.template
@@ -46,7 +46,8 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
+The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=0.82`, `b=0.68` (see [this page](experiments-msmarco-passage.md) for more details about tuning).
+An important note here is that tuning was performed on _on the original documents_, not the expanded documents.
+
 Note that retrieval metrics are computed to depth 1000 hits per query (as opposed to 100 hits per query for DL19 doc ranking).
 Also, for computing nDCG, remember that we keep qrels of _all_ relevance grades, whereas for other metrics (e.g., MAP), relevance grade 1 is considered not relevant (i.e., use the `-l 2` option in `trec_eval`).
-
-The setting "default" refers the default BM25 settings of `k1=0.9`, `b=0.4`, while "tuned" refers to the tuned setting of `k1=0.82`, `b=0.68` (see [this page](experiments-msmarco-passage.md) for more details about tuning).
