--- a/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-deepimpact.template
@@ -51,11 +51,12 @@ In order to reproduce results reported in the paper, we need to convert to MS MA
 
 ```bash
 python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
-   --input runs/run.msmarco-passage-deepimpact-b8.trec \
-   --output runs/run.msmarco-passage-deepimpact-b8.txt --quiet
+   --input runs/run.msmarco-passage-deepimpact.deepimpact.topics.msmarco-passage.dev-subset.deep-impact.tsv.gz \
+   --output runs/run.msmarco-passage-deepimpact.deepimpact.topics.msmarco-passage.dev-subset.deep-impact.tsv.gz.msmarco --quiet
 
 python tools/scripts/msmarco/msmarco_passage_eval.py \
-   collections/msmarco-passage/qrels.dev.small.tsv runs/run.msmarco-passage-deepimpact-b8.txt
+   collections/msmarco-passage/qrels.dev.small.tsv \
+   runs/run.msmarco-passage-deepimpact.deepimpact.topics.msmarco-passage.dev-subset.deep-impact.tsv.gz.msmarco
 ```
 
 The results should be as follows:
