--- a/pom.xml
+++ b/pom.xml
@@ -283,9 +283,14 @@
     </dependency>
     <dependency>
       <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-backward-codecs</artifactId>
+      <artifactId>lucene-analyzers-kuromoji</artifactId>
       <version>${lucene.version}</version>
     </dependency>
+    <!--dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-backward-codecs</artifactId>
+      <version>${lucene.version}</version>
+    </dependency-->
     <dependency> <!-- only needed for testing -->
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-test-framework</artifactId>
@@ -388,11 +393,6 @@
       <version>1.10.11</version>
     </dependency>
     <dependency>
-      <groupId>org.openrdf.sesame</groupId>
-      <artifactId>sesame-rio-ntriples</artifactId>
-      <version>4.1.2</version>
-    </dependency>
-    <dependency>
       <groupId>com.twitter.twittertext</groupId>
       <artifactId>twitter-text</artifactId>
       <version>2.0.10</version>
@@ -408,11 +408,6 @@
       <version>2.6.0</version>
     </dependency>
     <dependency>
-      <groupId>org.wikidata.wdtk</groupId>
-      <artifactId>wdtk-dumpfiles</artifactId>
-      <version>0.10.0</version>
-    </dependency>
-    <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>1.10.19</version>
@@ -426,11 +421,6 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
       <version>1.8</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.lucene</groupId>
-      <artifactId>lucene-analyzers-kuromoji</artifactId>
-      <version>${lucene.version}</version>
     </dependency>
   </dependencies>
 </project>
